implemented stick men, implemented perspective change.

--- a/libbodycontroller/main_window.ui
+++ b/libbodycontroller/main_window.ui
@@ -38,9 +38,9 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="testbutton">
+        <widget class="QPushButton" name="reset_btn">
          <property name="text">
-          <string>Horst.</string>
+          <string>Reset View</string>
          </property>
         </widget>
        </item>
@@ -50,8 +50,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="sprites.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
